<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QmitkDataStorageViewerTestControls</class>
 <widget class="QWidget" name="QmitkDataStorageViewerTestControls">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>945</width>
    <height>456</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>0</width>
    <height>0</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Data storage viewer test</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QmitkDataStorageListInspector" name="listInspector"/>
   </item>
   <item row="0" column="1">
    <widget class="QmitkDataStorageTreeInspector" name="treeInspector"/>
   </item>
   <item row="1" column="0">
    <widget class="QCheckBox" name="selectionProviderCheckBox1">
     <property name="text">
      <string>Set as selection provider</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QCheckBox" name="selectionProviderCheckBox2">
     <property name="text">
      <string>Set as selection provider</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QCheckBox" name="selectionListenerCheckBox1">
     <property name="text">
      <string>Set as selection listener</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="QCheckBox" name="selectionListenerCheckBox2">
     <property name="text">
      <string>Set as selection listener</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QmitkSingleNodeSelectionWidget" name="singleSlot" native="true">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>40</height>
      </size>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="QmitkMultiNodeSelectionWidget" name="multiSlot" native="true"/>
   </item>
   <item row="4" column="0">
    <widget class="QCheckBox" name="selectionProviderCheckBox3">
     <property name="text">
      <string>Set as selection provider</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1">
    <widget class="QCheckBox" name="selectionProviderCheckBox4">
     <property name="text">
      <string>Set as selection provider</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QCheckBox" name="selectionListenerCheckBox3">
     <property name="text">
      <string>Set as selection listener</string>
     </property>
    </widget>
   </item>
   <item row="5" column="1">
    <widget class="QCheckBox" name="selectionListenerCheckBox4">
     <property name="text">
      <string>Set as selection listener</string>
     </property>
    </widget>
   </item>
   <item row="6" column="0">
    <widget class="QCheckBox" name="checkOnlyVisible1">
     <property name="text">
      <string>Only valid nodes</string>
     </property>
    </widget>
   </item>
   <item row="6" column="1">
    <widget class="QCheckBox" name="checkOnlyVisible2">
     <property name="text">
      <string>Only valid nodes</string>
     </property>
    </widget>
   </item>
   <item row="7" column="0">
    <widget class="QCheckBox" name="checkOnlyImages1">
     <property name="text">
      <string>Allow only images </string>
     </property>
    </widget>
   </item>
    <item row="7" column="1">
    <widget class="QCheckBox" name="checkOnlyImages2">
     <property name="text">
      <string>Allow only images (using NodePredicate feature and general invalid message)</string>
     </property>
    </widget>
   </item>
   <item row="8" column="1">
    <widget class="QCheckBox" name="checkOnlyUneven">
     <property name="text">
      <string>Allow only uneven selection count (using check funcktion feature)</string>
     </property>
    </widget>
   </item>
    <item row="9" column="0">
    <widget class="QCheckBox" name="checkOptional1">
     <property name="text">
      <string>Is Optional</string>
     </property>
    </widget>
   </item>
   <item row="9" column="1">
    <widget class="QCheckBox" name="checkOptional2">
     <property name="text">
      <string>Is Optional</string>
     </property>
    </widget>
   </item>
   <item row="10" column="0">
    <widget class="QCheckBox" name="checkEnabled1">
     <property name="text">
      <string>Is Enabled</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="10" column="1">
    <widget class="QCheckBox" name="checkEnabled2">
     <property name="text">
      <string>Is Enabled</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="11" column="0">
    <widget class="QCheckBox" name="checkAuto">
     <property name="text">
      <string>Auto select node</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QmitkDataStorageListInspector</class>
   <extends>QWidget</extends>
   <header location="global">QmitkDataStorageListInspector.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>QmitkDataStorageTreeInspector</class>
   <extends>QWidget</extends>
   <header location="global">QmitkDataStorageTreeInspector.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>QmitkSingleNodeSelectionWidget</class>
   <extends>QWidget</extends>
   <header location="global">QmitkSingleNodeSelectionWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>QmitkMultiNodeSelectionWidget</class>
   <extends>QWidget</extends>
   <header location="global">QmitkMultiNodeSelectionWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
